# bagflip-casino

./: .env.example  .gitignore  Anchor.toml  BACKEND_CHECKLIST_STATUS.md  BAGFLIP_COMPLETE_STATUS.md  BAGFLIP_XYZ_SETUP.md  BUILD_SUCCESS.md  COMPLETE_UI_SUMMARY.md  CSS_FIX_INSTRUCTIONS.md  CURRENT_ISSUES_AND_FIXES.md  DATABASE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_NOW.md  DEVNET_SETUP.md  DOMAIN_SETUP.md  FINAL_STATUS.md  GAME_MODES.md  LOCAL_TESTING_GUIDE.md  MASTER_CHECKLIST.md  MOCK_MODE_INFO.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY.md  PROJECT_STRUCTURE.md  PVP_CHECKLIST_STATUS.md  PVP_SYSTEM.md  QUICKSTART.md  QUICK_STATUS.md  RAILWAY_DEPLOY_NOW.md  README.md  REALTIME_SYSTEM_STATUS.md  REPO_READY.md  SECURITY.md  SOLANA_CONTRACTS_STATUS.md  SOL_PAYOUTS_READY.md  SWITCHBOARD_INTEGRATION.md  TESTING_GUIDE.md  TESTING_STATUS.md  (+12 more)
app/: .env.example  .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts  vercel.json
app/app/: globals.css  layout.tsx  page.tsx
app/components/: GameCard.tsx  GameInfo.tsx  Hero.tsx  Leaderboard.tsx  LiveFeed.tsx  (+6 more)
backend/: .env.example  .railwayignore  casino.db  nixpacks.toml  package-lock.json  package.json  treasury-keypair.json
programs/flip-casino/: Cargo.toml
programs/flip-casino/src/: errors.rs  lib.rs  state.rs
programs/flip-casino/src/instructions/: admin.rs  create_game.rs  initialize_treasury.rs  mod.rs  pvp.rs  settle_game.rs
scripts/: deploy.sh  initialize-treasury.ts  test-local.sh
tests/: flip-casino.ts
(+16 files in other folders)
