[package]
name = "flip-casino"
version = "0.1.0"
description = "On-chain casino for $FLIP token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flip_casino"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
